--- a/configs/.env.example
+++ b/configs/.env.example
@@ -48,16 +48,10 @@ LAYOUT_MODEL_PATH=models/layout_m.onnx
 LOCAL_MODEL_PATH=models/m2m100_ct2
 
 # =============================================================================
-# Redis Configuration
+# Cache Configuration (In-Memory)
 # =============================================================================
-# Redis host (localhost for development, Memorystore IP for production)
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-
-# Redis connection timeout settings (for cloud environments)
-# REDIS_SOCKET_TIMEOUT=10
-# REDIS_SOCKET_CONNECT_TIMEOUT=10
+# Redis is disabled - using in-memory cache for session/chat data
+# Note: Cache data will be lost on server restart
 
 # =============================================================================
 # Storage Settings
