--- a/inference-service/cloudbuild.yaml
+++ b/inference-service/cloudbuild.yaml
@@ -1,46 +1,63 @@
 # ServiceB（推論サービス）用Cloud Build設定
 steps:
   # Docker イメージのビルド
-  - name: 'gcr.io/cloud-builders/docker'
-    args: [
-      'build',
-      '-t', 'gcr.io/$PROJECT_ID/paperterrace-inference:$COMMIT_SHA',
-      '-t', 'gcr.io/$PROJECT_ID/paperterrace-inference:latest',
-      '.'
-    ]
-    dir: 'inference-service'
+  - name: "gcr.io/cloud-builders/docker"
+    args:
+      [
+        "build",
+        "-t",
+        "gcr.io/$PROJECT_ID/paperterrace-inference:$COMMIT_SHA",
+        "-t",
+        "gcr.io/$PROJECT_ID/paperterrace-inference:latest",
+        ".",
+      ]
+    dir: "inference-service"
 
   # Docker イメージのプッシュ
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/paperterrace-inference:$COMMIT_SHA']
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["push", "gcr.io/$PROJECT_ID/paperterrace-inference:$COMMIT_SHA"]
 
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/paperterrace-inference:latest']
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["push", "gcr.io/$PROJECT_ID/paperterrace-inference:latest"]
 
   # Cloud Run へのデプロイ
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: 'gcloud'
-    args: [
-      'run', 'deploy', 'paperterrace-inference',
-      '--image', 'gcr.io/$PROJECT_ID/paperterrace-inference:$COMMIT_SHA',
-      '--region', 'asia-northeast1',
-      '--platform', 'managed',
-      '--allow-unauthenticated',
-      '--memory', '4Gi',
-      '--cpu', '4',
-      '--min-instances', '1',
-      '--max-instances', '10',
-      '--concurrency', '10',
-      '--cpu-always-allocated',
-      '--set-env-vars', 'ORT_INTRA_THREADS=4,ORT_INTER_THREADS=2,CT2_INTER_THREADS=1,CT2_INTRA_THREADS=4,LOG_LEVEL=INFO',
-      '--timeout', '300',
-      '--execution-environment', 'gen2'
-    ]
+  - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
+    entrypoint: "gcloud"
+    args:
+      [
+        "run",
+        "deploy",
+        "paperterrace-inference",
+        "--image",
+        "gcr.io/$PROJECT_ID/paperterrace-inference:$COMMIT_SHA",
+        "--region",
+        "asia-northeast1",
+        "--platform",
+        "managed",
+        "--allow-unauthenticated",
+        "--memory",
+        "2Gi",
+        "--cpu",
+        "2",
+        "--min-instances",
+        "0",
+        "--max-instances",
+        "10",
+        "--concurrency",
+        "10",
+        "--cpu-always-allocated",
+        "--set-env-vars",
+        "ORT_INTRA_THREADS=4,ORT_INTER_THREADS=2,CT2_INTER_THREADS=1,CT2_INTRA_THREADS=4,LOG_LEVEL=INFO",
+        "--timeout",
+        "300",
+        "--execution-environment",
+        "gen2",
+      ]
 
 # ビルド設定
 options:
-  machineType: 'E2_HIGHCPU_8'
+  machineType: "E2_HIGHCPU_8"
   diskSizeGb: 100
 
 # タイムアウト設定
-timeout: '1200s'
+timeout: "1200s"
